--- a/style.css
+++ b/style.css
@@ -21,6 +21,38 @@ html {
 body {
   font-size: 1.6rem;
   font-family: var(--primary-font);
+  color: var(--color-black);
+}
+
+.header {
+  justify-content: space-around;
+  display: flex;
+  align-items: center;
+}
+
+.header-nav-list {
+  list-style: none;
+}
+
+.header-nav-list {
+  display: flex;
+  gap: 4rem;
+}
+
+.header-logo {
+  text-transform: capitalize;
+  font-size: bold;
+}
+
+.header-nav-list {
+  text-transform: capitalize;
+  color: var(--color-black);
+}
+
+@media  screen and (max-width) {
+  .header {
+    flex-direction: column;
+  }
   
 }
 
