Adding the footer and other sections

--- a/style.css
+++ b/style.css
@@ -203,6 +203,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2rem;
+
 }
 .banner-2-subtitle {
   font-family: var(--primary-font);
@@ -219,6 +221,60 @@ body {
 
 
 
+
+/* menu section */
+
+.menu-item-title {
+  margin: 1rem 0;
+  text-transform: capitalize;
+  font-weight: 500;
+}
+
+.menu-item-description{
+  margin: 1.5rem;
+  font-size: 1.4rem;
+  color: #777;
+  text-align: justify;
+  line-height: 1.7;
+}
+
+.menu-item-cta {
+  color: #888;
+  text-align: left;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.menu {
+  padding: 6rem 2rem;
+}
+
+.menu-item-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  row-gap: 3rem;
+  gap: 2rem;
+}
+.menu-item img {
+  width: 40rem;
+  height: 30rem;
+}
+
+
+/* FOOTER SECTION    */
+
+.footer {
+  background-color: #999;
+
+}
+
+.footer-text {
+  text-align: center;
+  padding: 1rem;
+  font-size: 1.4rem;
+  font-weight: 300;
+}
 
 /* RESPONSIVENESS */
 
