--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ body {
   display: flex;
   align-items: center;
   padding: 0.8rem;
+  position: fixed;
+  background-color: var(--color-white);
+  width: 100%;
+  border-bottom: 2px solid red;
+  z-index: 100;
 }
 
 .header-nav-list {
@@ -61,7 +66,7 @@ body {
 .header-logo-wrapper {
   text-decoration: none;
   color: var(--color-black);
-  
+
 }
 
 /* Heros sections  */
@@ -75,6 +80,7 @@ body {
   align-items: center;
   display: flex;
   justify-content: center;
+  margin: 6rem;
 }
 
 .hero-subtitle, .hero-title{
